--- a/week02/week02_project/myapp/templates/home.html
+++ b/week02/week02_project/myapp/templates/home.html
@@ -7,6 +7,7 @@
   
 	<h2>Contact detail:</h2>
 	<p>Wasit Limprasert</p>
+	<p>{{ key }}</p>
 	<p>email: wasit7@gmail.com</p>
 	<p>tel: 082-663-9206</p>
   </div>
